--- a/easy21.ipynb
+++ b/easy21.ipynb
@@ -4,8 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Easy21 assignment\n",
-    "from UCL Course on RL https://www.davidsilver.uk/teaching/"
+    "# Easy21 assignment \n",
+    "from UCL Course on RL https://www.davidsilver.uk/teaching/\n",
+    "\n",
+    "full description https://www.davidsilver.uk/wp-content/uploads/2020/03/Easy21-Johannes.pdf"
    ]
   },
   {
@@ -14,16 +16,142 @@
    "source": [
     "## 1  Implementation of Easy21 (10 marks)\n",
     "\n",
-    "You should write an environment that implements the game Easy21.  \n",
-    "Specifically, write a function, namedstep, which takes as input a states (dealer’s firstcard 1–10 and the player’s sum 1–21), and an action $a$ (hit or stick), and returns a sample of the next state $s^′$(which may be terminal if the game is finished) and reward $r$.  We will be using this environment for model-free reinforcement learning, and you should not explicitly represent the transition matrix for the MDP. There is no discounting $(γ= 1)$.  You should treat the dealer’s moves as part of the environment, i.e.  calling stepwith as tick action will play out the dealer’s cards and return the final reward and terminal state."
+    "You should write an environment that implements the game Easy21.\n",
+    "\n",
+    "Specifically, write a function, namedstep, which takes as input a states (dealer’s firstcard 1–10 and the player’s sum 1–21), and an action $a$ (hit or stick), and returns a sample of the next state $s^′$(which may be terminal if the game is finished) and reward $r$.  We will be using this environment for model-free reinforcement learning, and you should not explicitly represent the transition matrix for the MDP. There is no discounting $(γ= 1)$.  You should treat the dealer’s moves as part of the environment, i.e.  calling step with a stick action will play out the dealer’s cards and return the final reward and terminal state.\n",
+    "\n",
+    "1. first step two black cards to everybody\n",
+    "2. then player is turning\n",
+    "3. state = {dealer_sum, player_sum}\n",
+    "4. player does actions {hit,stick}\n",
+    "5. stick - no new card, hit - a new one\n",
+    "6. if player.sum() > 21 | < 1 then 'goes bust', return reward -1\n",
+    "7. if player stick the dealer starts making turns\n",
+    "8. the dealer always sticks on any sum of >=17 and hits otherwise\n",
+    "9. red card subtract value from player.sum, black card add\n",
+    "10. if the dealer 'goes bust' reward +1, if player -1, if player has 21 reward is 0\n",
+    "\n",
+    "    \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 276,
+   "metadata": {
+    "code_folding": [
+     3,
+     8,
+     16,
+     19,
+     22,
+     26,
+     31
+    ]
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "\n",
+    "class Easy21:\n",
+    "    def __init__(self):        \n",
+    "        self.dealer_sum = 0\n",
+    "        self.player_sum = 0\n",
+    "        self.started = False\n",
+    "                    \n",
+    "    def draw_a_card(self, black_only=False):                        \n",
+    "        if black_only: \n",
+    "            r = random.randint(1, 10)                \n",
+    "        else:\n",
+    "            r = random.randint(1, 10)*(-1 if random.random() < 1/3 else 1)\n",
+    "        print('C:', r)\n",
+    "        return r\n",
+    "    \n",
+    "    def state(self):\n",
+    "            return [self.dealer_sum, self.player_sum]\n",
+    "        \n",
+    "    def draw(self):\n",
+    "        return self.player_sum == 21\n",
+    "    \n",
+    "    def goes_bust(self, summ):        \n",
+    "        if summ > 21 or summ < 1:            \n",
+    "            return True\n",
+    "        \n",
+    "    def dealer_hit(self):\n",
+    "        if self.dealer_sum < 17:\n",
+    "            return True\n",
+    "        return False\n",
+    "                \n",
+    "    def step(self, state, action): \n",
+    "        if self.started == False:            \n",
+    "            self.player_sum = self.draw_a_card(True)\n",
+    "            self.dealer_sum = self.draw_a_card(True)\n",
+    "            self.started = True\n",
+    "            return self.state()\n",
+    "        else:\n",
+    "            if action == 'hit':\n",
+    "                self.player_sum += self.draw_a_card()\n",
+    "                if self.draw():\n",
+    "                    self.started = False\n",
+    "                    return 0\n",
+    "                if self.goes_bust(self.player_sum):\n",
+    "                    self.started = False\n",
+    "                    return -1\n",
+    "                return self.state()\n",
+    "            else:             \n",
+    "                while self.dealer_hit():\n",
+    "                    self.dealer_sum += self.draw_a_card()\n",
+    "                    if self.goes_bust(self.dealer_sum):\n",
+    "                        self.started = False\n",
+    "                        return 1\n",
+    "                if self.dealer_sum > self.player_sum:\n",
+    "                    return -1            \n",
+    "                return self.state()\n",
+    "\n",
+    "e = Easy21() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 277,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C: 4\n",
+      "C: 4\n",
+      "[4, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e.step(e.state(), 'hit'))\n",
+    "# print(e.state())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 278,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C: 3\n",
+      "C: 8\n",
+      "C: -7\n",
+      "C: 8\n",
+      "C: -4\n",
+      "C: 10\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(e.step(e.state(), 'stick'))"
+   ]
   },
   {
    "cell_type": "markdown",
