--- a/easy21.ipynb
+++ b/easy21.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "code_folding": [
      8,
@@ -52,7 +52,15 @@
      91
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
    "source": [
     "import easy21\n",
     "\n",
@@ -60,7 +68,10 @@
     "\n",
     "# m = easy21.sqr(5,6)\n",
     "\n",
-    "# print(m)\n"
+    "# print(m)\n",
+    "\n",
+    "import algorithms\n",
+    "algorithms.sqr(3,9)\n"
    ]
   },
   {
